# hmdee

./: .travis.yml  Cargo.toml  LICENSE  README.md
core/: Cargo.toml
core/src/: error.rs  lib.rs  math.rs
examples/: basic.rs
hmdee/: Cargo.toml
hmdee/src/: context.rs  discover.rs  headset.rs  hmd.rs  lib.rs
hmdee/src/backend/: backend_psvr.rs  mod.rs  psvr.rs
hmdee/src/info/: lens.rs  mod.rs
hmdee/src/input/: button.rs  mod.rs
psvr/: Cargo.toml
psvr/examples/: basic.rs
psvr/src/: client.rs  command.rs  errors.rs  inertia.rs  lib.rs  math.rs  protocol.rs  sensor.rs  usb.rs
src/: client.rs  errors.rs  inertia.rs  lib.rs  math.rs  protocol.rs  sensor.rs  usb.rs
src/usb/: command.rs  mod.rs  sensor.rs
