[package]
name = "psvr"
version = "0.2.0"
authors = ["Dylan McKay <me@dylanmckay.io>"]

description = "Library for interfacing with the PlayStation VR"
documentation = "http://docs.rs/psvr"
repository = "https://github.com/dylanmckay/psvr"

readme = "README.md"
license = "MIT"

categories = ["game-engines"]
keywords = ["vr", "virtual", "reality", "playstation", "hmd"]

[dependencies]
hmdee_core = { path = "../core", version = "0.1" }
ahrs = { version = "0.2.1", default-features = false }
byteorder = "1.3"
delta = "0.2"
failure = "0.1"
# Required to work around missing interface number support on Mac.
# Going back to crates.io blocked on this pull request.
# https://github.com/signal11/hidapi/pull/380
hidapi = { git = "https://github.com/dylanmckay/hidapi-rs.git", branch = "mac-hid-interface-support" }
nalgebra = "0.18"

