[package]
name = "psvr"
version = "0.3.0"
authors = ["Dylan McKay <me@dylanmckay.io>"]
edition = "2018"

description = "Library for interfacing with the PlayStation VR"
documentation = "http://docs.rs/psvr"
repository = "https://github.com/dylanmckay/hmdee"

readme = "README.md"
license = "MIT"

categories = ["game-engines"]
keywords = ["vr", "virtual", "reality", "playstation", "hmd"]

[dependencies]
hmdee_core = { path = "../core", version = "0.1" }
ahrs = { version = "0.3", default-features = false }
byteorder = "1.4"
delta = "0.2"
failure = "0.1"
hidapi = "1.2"
nalgebra = "0.21"

